--- a/my-deployment-hello-world.yaml
+++ b/my-deployment-hello-world.yaml
@@ -11,7 +11,7 @@ spec:
     spec:
       containers:
       - name: hello-world
-        image: 702401326258.dkr.ecr.us-east-1.amazonaws.com/hello-world:latest
+        image: 066283105853.dkr.ecr.us-east-2.amazonaws.com/ateb-hackathon-demo:latest
         ports:
         - name: http-port
           containerPort: 80
